[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameInterface/Interface.gd" type="Script" id=1]
[ext_resource path="res://GameInterface/LifeBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameInterface/OxygenBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameInterface/OxygenBar.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Player/Oxygen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Character/Health.tscn" type="PackedScene" id=6]

[node name="Interface" type="Control" index="0" groups=[
"actors",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 1.0
margin_right = -826.0
margin_bottom = -661.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Material" ]

[node name="Bars" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Material" ]

[node name="LifeBar" parent="Bars" index="0" instance=ExtResource( 2 )]

margin_bottom = 27.0
_sections_unfolded = [ "Margin", "Material" ]

[node name="counter" parent="Bars/LifeBar" index="0"]

margin_bottom = 27.0

[node name="Icon" parent="Bars/LifeBar/counter" index="0"]

margin_left = 98.0
margin_top = -27.0
margin_right = 187.0
margin_bottom = 53.0

[node name="TextureProgress" parent="Bars/LifeBar" index="1"]

margin_bottom = 27.0

[node name="OxygenBar" parent="Bars" index="1" instance=ExtResource( 3 )]

margin_top = 31.0
margin_bottom = 58.0
script = ExtResource( 4 )

[node name="Icon" parent="Bars/OxygenBar/counter" index="0"]

margin_left = 98.0
margin_top = -26.0
margin_right = 187.0
margin_bottom = 54.0

[node name="Oxygen" parent="." index="1" instance=ExtResource( 5 )]

[node name="Health" parent="." index="2" groups=[
"Persistant",
] instance=ExtResource( 6 )]

[connection signal="health_changed" from="." to="Bars/LifeBar" method="_on_Interface_health_changed"]

[connection signal="oxygen_changed" from="." to="Bars/OxygenBar" method="_on_Interface_oxygen_changed"]

[connection signal="oxygen_changed" from="Oxygen" to="." method="_on_Oxygen_oxygen_changed"]

[connection signal="health_changed" from="Health" to="." method="_on_Health_health_changed"]


[editable path="Bars/LifeBar"]
[editable path="Bars/OxygenBar"]
